# pouf

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  TODO  init.cpp  init.h
adaptive/: dependency.h  manager.cpp  manager.h
collision/: triangle_model.cpp  triangle_model.h
linearsolver/: jacobi.cpp  jacobi.h  pgs.cpp  pgs.h
mapping/: LocalFrameMapping.cpp  LocalFrameMapping.h  RigidMultiMapping.cpp  RigidMultiMapping.h
math/: anderson.cpp  anderson.h  iter.h  lanczos.h  lcp.h  minres.h  nlnscg.cpp  nlnscg.h  types.h
odesolver/: pouf_solver.cpp  pouf_solver.h
python/pouf/: __init__.py  api.py  behavior.py  console.py  contact.py  control.py  gl.py  gui.py  joint.py  pid.py  plot.py  pose.py  quat.py  rigid.py  robot.py  script.py  tool.py
scene/: am.py  angular_momentum.py  balance.py  console.py  constraint.py  contact.py  contacts.py  cop.py  friction_validation.py  fsm.py  gl.py  groups.py  pid_example.py  robot.py  servo.py  step.py  task_space.py  unilateral.py  walk.py
test/: dependency.cpp  dependency.py  groups.py
thread/: pool.h  worker.cpp  worker.h
tool/: action.cpp  action.h  assemble.cpp  assemble.h  box.h  data.cpp  data.h  disable_rigid_mouse_interaction.cpp  find_insert.h  graph_vector.cpp  graph_vector.h  here.h  lcp.h  log.h  mapping_graph.cpp  mapping_graph.h  propagate_position_velocity.cpp  python.cpp  register_object.h  sparse.h
